--- a/css/master.css
+++ b/css/master.css
@@ -45,6 +45,7 @@ body {
 .settings-box .option-box h4 {
   margin: 0;
   color: #666;
+  font-size: 14px;
 }
 .settings-box .option-box .colors-list {
   list-style: none;
@@ -78,6 +79,27 @@ body {
 }
 .settings-box .option-box .colors-list li:nth-child(5) {
   background-color: #4caf50;
+}
+.settings-box .option-box .yes,
+.settings-box .option-box .no {
+  width: 50px;
+  background-color: #009688;
+  color: #fff;
+  margin-top: 10px;
+  display: inline-block;
+  font-size: 12px;
+  padding: 4px 10px;
+  font-weight: bold;
+  border-radius: 4px;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.settings-box .random-backgrounds span.active {
+  opacity: 1;
+}
+.settings-box .random-backgrounds .yes {
+}
+.settings-box .random-backgrounds .no {
 }
 
 /* End Settings Box */
